# update-checker

./: .gitignore  Makefile.am  autogen.sh  configure.ac
etc/: Makefile.am  update-checker.conf
man/: Makefile.am  custom-html.xsl  make-man-index.py  update-checker-migration.8.xml  update-checker.8.xml  update-checker.conf.5.xml
sbin/: Makefile.am  check-for-unused-modules  check-unused-modules  update-checker  update-checker-migration
systemd/: Makefile.am  update-checker-migration.service  update-checker-migration.timer  update-checker.service  update-checker.timer
